@@ -144,24 +144,36 @@ class RangeFile(object):
                                           'Invalid range, size <= 0')
         self.set_range(start, size)
 
+    # in _checked_read() below, we may have to discard several MB in the worst
+    # case. To avoid buffering that much, we read and discard by chunks
+    # instead. The underlying file is either a socket or a StringIO, so reading
+    # 8k chunks should be fine.
+    _discarded_buf_size = 8192
+
     def _checked_read(self, size):
-        """Read the file checking for short reads"""
+        """Read the file checking for short reads.
+
+        The data read is discarded along the way.
+        """
         pos = self._pos
-        data = self._file.read(size)
-        data_len = len(data)
+        data_len = 0
+        while size - data_len > self._discarded_buf_size:
+            data = self._file.read(self._discarded_buf_size)
+            data_len += len(data)
+        if size - data_len > 0:
+            data = self._file.read(size - data_len)
+            data_len += len(data)
         if size > 0 and data_len != size:
             raise errors.ShortReadvError(self._path, pos, size, data_len)
         self._pos += data_len
-        return data
 
     def _seek_to_next_range(self):
         # We will cross range boundaries
         if self._boundary is None:
             # If we don't have a boundary, we can't find another range
-            raise errors.InvalidRange(
-                self._path, self._pos,
-                "Range (%s, %s) exhausted"
-                % (self._start, self._size))
+            raise errors.InvalidRange(self._path, self._pos,
+                                      "Range (%s, %s) exhausted"
+                                      % (self._start, self._size))
         self.read_boundary()
         self.read_range_definition()
 
